--- a/TheWeb/src/index.html
+++ b/TheWeb/src/index.html
@@ -19,14 +19,19 @@
     <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../node_modules/bootstrap-confirmation2/dist/bootstrap-confirmation.min.js"></script>
     <link href="../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <script src="app/login/login.js"></script>
+    <script src="app/javascript/JavaScript.js"></script>
+    <script src="app/javascript/loading-bars.js"></script>
     <!--<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>-->
     <!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cagliostro">-->
     <script>
-        setTimeout(function () {
-            $('.alert').hide('fade');
-        }, 2000);
+        //window.setTimeout(function () {
+        //    $(".alert").fadeTo(500, 0).slideUp(500, function () {
+        //        $(this).remove();
+        //    });
+        //}, 10000);
     </script>
 </head>
 <body>
